--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-multiselect": "^3.0.0-beta.3",
+    "vue-router": "^4.0.3",
+    "vue-select-3": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
